Object scaling not fluid #106363

Closed
opened 2023-03-31 09:06:16 +02:00 by Stefano Toneatto · 4 comments

System Information
Operating system: Windows-10-10.0.19044-SP0 64 Bits
Graphics card: NVIDIA GeForce RTX 2060/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 516.94

Blender Version
Broken: version: 3.6.0 Alpha, branch: main, commit date: 2023-03-31 02:03, hash: cde99075e870
Worked: 3.4.1

Object scaling not fluid

Scaling objects with snap option turned on for both Edge and Vertex, it behaves as if it's in "Increment" mode. Broken both in edit mode and object mode.

After further inspection, turns out that enabling any mode in snapping makes it work as if it's in "Increment" mode.

Exact steps for others to reproduce the error

  • Turn on snapping and enable "Vertex" and "Edge" mode.
  • Scale the object, the object scales in increment.
  • In edit mode, do the same, also scales in increment.
**System Information** Operating system: Windows-10-10.0.19044-SP0 64 Bits Graphics card: NVIDIA GeForce RTX 2060/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 516.94 **Blender Version** Broken: version: 3.6.0 Alpha, branch: main, commit date: 2023-03-31 02:03, hash: `cde99075e870` Worked: 3.4.1 **Object scaling not fluid** Scaling objects with snap option turned on for both Edge and Vertex, it behaves as if it's in "Increment" mode. Broken both in edit mode and object mode. After further inspection, turns out that enabling _any_ mode in snapping makes it work as if it's in "Increment" mode. **Exact steps for others to reproduce the error** - Turn on snapping and enable "Vertex" and "Edge" mode. - Scale the object, the object scales in increment. - In edit mode, do the same, also scales in increment.
Stefano Toneatto added the
Severity
Normal
Status
Needs Triage
Type
Report
labels 2023-03-31 09:06:17 +02:00
Member

Can confirm the issue under 3.6 and 3.5, 3.4.1 and below is working normally.

Can confirm the issue under 3.6 and 3.5, 3.4.1 and below is working normally.
YimingWu added
Status
Confirmed
and removed
Status
Needs Triage
labels 2023-03-31 09:57:31 +02:00
Member

Caused by 88e2542398, see source/blender/editors/transform/transform_snap.cc line 734.

  if (doForceIncrementSnap(t)) {
    t->tsnap.mode = SCE_SNAP_MODE_INCREMENT;
  }

I'm not quite sure why this logic is needed? Or at least it should not be needed in 3D Viewer space. I don't know if this is actually the intention but the behaviour of this means that when snapping "Affect" is turned off, it snaps to increment, when "Affect" is on, it snaps to the option you choose, that's rather weird, so I'm not sure how this should be fixed.

Also see source/blender/editors/transform/transform_snap.c line 164, at f190f2d267df.

cc @ideasman42 @mano-wii

Caused by 88e254239896, see `source/blender/editors/transform/transform_snap.cc` line 734. ``` if (doForceIncrementSnap(t)) { t->tsnap.mode = SCE_SNAP_MODE_INCREMENT; } ``` I'm not quite sure why this logic is needed? Or at least it should not be needed in 3D Viewer space. I don't know if this is actually the intention but the behaviour of this means that when snapping "Affect" is turned off, it snaps to increment, when "Affect" is on, it snaps to the option you choose, that's rather weird, so I'm not sure how this should be fixed. Also see `source/blender/editors/transform/transform_snap.c` line 164, at `f190f2d267df`. cc @ideasman42 @mano-wii

Does this really work as you described in 3.4.1?

To use the other snapping options, you need to enable this option first:
image

Does this really work as you described in 3.4.1? To use the other snapping options, you need to enable this option first: ![image](/attachments/a01d1505-77c5-4c75-ae55-9ce9475db0dd)
150 KiB

The report description is confusing but I understand the problem now.
The Snapping toggle should have no effect on operators indicating with "Affect".

The report description is confusing but I understand the problem now. The Snapping toggle should have no effect on operators indicating with "Affect".
Germano Cavalcante added the
Module
Modeling
label 2023-03-31 21:25:58 +02:00
Blender Bot added
Status
Resolved
and removed
Status
Confirmed
labels 2023-03-31 21:30:38 +02:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset System
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Code Documentation
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Viewport & EEVEE
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Asset Browser Project
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Module
Viewport & EEVEE
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Severity
High
Severity
Low
Severity
Normal
Severity
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#106363
No description provided.