Fix #106363: snap toggle affecting operators not set to 'Affect'

Regression due 88e2542398.

Although the "Non-Affect" operators continue to use incremental,
this snapping should not be enabled by default.